--- a/zztetris.css
+++ b/zztetris.css
@@ -65,12 +65,15 @@ label > input[class='paintbucket'] + *::before {
 	height: 1rem;
 	margin-right: 0.3rem;
     margin-top: 0.3rem;
-	border-radius: 100%;
+	border-radius: 50%;
 	border-style: solid;
-	border-width: 0.3rem;
+	border-width: 0.2rem;
+    filter: brightness(50%);
 }
 label > input[class='paintbucket']:checked + *::before {
 	border-color: whitesmoke;
+    filter: brightness(150%);
+
 }
 
 label > input[id='X'] + *::before {
