--- a/styles/board_settings.css
+++ b/styles/board_settings.css
@@ -18,7 +18,7 @@
     display: block;
     height: 24px;
     width: 24px;
-    background-image: url('../icons/shuffle.png');
+    background-image: url('../assets/icons/shuffle.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
