disabling double-tap to zoom

--- a/styles/zztetris.css
+++ b/styles/zztetris.css
@@ -10,6 +10,9 @@
 	font-family: SLANT;
 	src: url('../assets/fonts/Sunmoreslantfree-DOMDx.ttf');
 }
+* {
+    touch-action: manipulation;
+}
 body {
     font-family: SLANT;
 }
